# cs-ml-forecasting

./: app.py  pyproject.toml
data/predictions/: avg_feature_importance.csv  ml_predictions.csv  rb_predictions.csv
data/processed/: sales.csv
